objects/User.object
<CustomObject>
    <fields>
        <fullName>Assigned_Product_Category__c</fullName>
        <description>This will be populated with the Product Category value assigned to the User part of the Contracts Team</description>
        <inlineHelpText>Choose one or more value if User is Part of Contracts Team</inlineHelpText>
        <label>Assigned Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Is_Contract_User__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IFEC</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Region__c</fullName>
        <label>Assigned Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Is_Contract_User__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DART_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, users in community will see link to DART system</description>
        <label>DART User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFE_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BillingCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFE_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email Opt In for Technical Publications</description>
        <label>Tech Pub Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contract_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked if the user is part of the Contracts Team</description>
        <inlineHelpText>Check if the user is part of the Contracts Team</inlineHelpText>
        <label>Is Contract User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Alias__c</fullName>
        <description>PAC Alias custom field. Need this field because PAC alias exceeds 8 char limit.</description>
        <label>L2I_Alias</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Cost_Center__c</fullName>
        <description>Cost Center</description>
        <label>Cost Center</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_FederationId__c</fullName>
        <description>Federation Id used for SSO</description>
        <label>FederationId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_First_Login_DateTime__c</fullName>
        <label>First Login DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Oracle_Id__c</fullName>
        <defaultValue>&quot;ORA&quot; +  $User.LastName  +  $User.Phone</defaultValue>
        <description>Oracle Id</description>
        <externalId>true</externalId>
        <label>Oracle Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Preferred_Name__c</fullName>
        <description>Preferred Name</description>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Privacy_Policy_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Policy Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Supervisor_Email__c</fullName>
        <description>Email of the supervisor</description>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>L2I_Workday_Id__c</fullName>
        <defaultValue>$User.LastName  +  $User.Phone</defaultValue>
        <description>Workday Id</description>
        <externalId>true</externalId>
        <label>Workday Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Worker_Type__c</fullName>
        <description>Worker Type</description>
        <label>Worker Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Email_Can_be_edited_by_Sys_admins_only</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Email) &amp;&amp;  $Profile.Name != &#39;System Administrator&#39; &amp;&amp;  
NOT(ISBLANK(ContactId)) &amp;&amp; NOT(ISNULL(ContactId))</errorConditionFormula>
        <errorMessage>Only System Administrator can edit email address</errorMessage>
    </validationRules>
</CustomObject>